# realtime_transcription

./: .dockerignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: f50c0cf82cfc_meta_data.py
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: sessions.py  websocket.py
backend/app/crud/: __init__.py  base.py  session.py  transcript.py
backend/app/models/: __init__.py  session.py  transcript.py
backend/app/schemas/: __init__.py  session.py  transcript.py  websocket.py
backend/app/services/: audio_processor.py  transcription.py
backend/tests/: test_api.py
frontend/: Dockerfile  package-lock.json  package.json
frontend-next/: package-lock.json  package.json
frontend-next/app/: layout.tsx  page.tsx
frontend-next/components/: AudioRecorder.tsx  Navbar.tsx  SessionList.tsx  TranscriptDisplay.tsx
frontend-next/hooks/: useAudioRecorder.ts
frontend-next/lib/: api.ts  utils.ts  websocket.ts
frontend-next/types/: index.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/sessions/: page.tsx
frontend/app/sessions/[id]/: page.tsx
frontend/components/: AudioRecorder.tsx
frontend/hooks/: useTranscription.ts
frontend/lib/: websocket.ts
